cmake_minimum_required (VERSION 3.15)

project(ngspice C)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_library(ngspice
	"./src/maths/ni/nicomcof.c"
	"./src/maths/ni/nipred.c"
	"./src/maths/ni/niconv.c"
	"./src/maths/ni/nipzmeth.c"
	"./src/maths/ni/niinteg.c"
	"./src/maths/ni/nisenre.c"
	"./src/maths/ni/niaciter.c"
	"./src/maths/ni/niditer.c"
	"./src/maths/ni/niiter.c"
	"./src/maths/ni/niinit.c"
	"./src/maths/ni/nireinit.c"
	"./src/maths/ni/niniter.c"
	"./src/maths/ni/nidest.c"
	"./src/maths/sparse/spextra.c"
	"./src/maths/sparse/spbuild.c"
	"./src/maths/sparse/spfactor.c"
	"./src/maths/sparse/sputils.c"
	"./src/maths/sparse/spsolve.c"
	"./src/maths/sparse/spalloc.c"
	"./src/maths/sparse/spoutput.c"
	"./src/maths/sparse/spsmp.c"
	"./src/maths/fft/fftext.c"
	"./src/maths/fft/fftlib.c"
	"./src/maths/fft/matlib.c"
	"./src/maths/poly/polyeval.c"
	"./src/maths/poly/interpolate.c"
	"./src/maths/poly/polyderiv.c"
	"./src/maths/poly/polyfit.c"
	"./src/maths/cmaths/test_cx_mag.c"
	"./src/maths/cmaths/cmath2.c"
	"./src/maths/cmaths/test_cx_ph.c"
	"./src/maths/cmaths/test_cx_j.c"
	"./src/maths/cmaths/cmath3.c"
	"./src/maths/cmaths/test_cx_cph.c"
	"./src/maths/cmaths/cmath4.c"
	"./src/maths/cmaths/cmath1.c"
	"./src/maths/deriv/plusder.c"
	"./src/maths/deriv/divderiv.c"
	"./src/maths/deriv/powderiv.c"
	"./src/maths/deriv/cubeder.c"
	"./src/maths/deriv/tanderiv.c"
	"./src/maths/deriv/expderiv.c"
	"./src/maths/deriv/multder.c"
	"./src/maths/deriv/equalder.c"
	"./src/maths/deriv/cosderiv.c"
	"./src/maths/deriv/atander.c"
	"./src/maths/deriv/sqrtder.c"
	"./src/maths/deriv/timesder.c"
	"./src/maths/deriv/invderiv.c"
	"./src/maths/dense/dense.c"
	"./src/maths/misc/isnan.c"
	"./src/maths/misc/randnumb.c"
	"./src/maths/misc/equality.c"
	"./src/maths/misc/accuracy.c"
	"./src/maths/misc/bernoull.c"
	"./src/maths/misc/scalb.c"
	"./src/maths/misc/test_accuracy.c"
	"./src/maths/misc/isinf.c"
	"./src/maths/misc/logb.c"
	"./src/maths/misc/norm.c"
	"./src/maths/KLU/amd_info.c"
	"./src/maths/KLU/klusmp.c"
	"./src/maths/KLU/btf_maxtrans.c"
	"./src/maths/KLU/klu_analyze.c"
	"./src/maths/KLU/amd_control.c"
	"./src/maths/KLU/klu_sort.c"
	"./src/maths/KLU/amd_2.c"
	"./src/maths/KLU/klu_factor.c"
	"./src/maths/KLU/amd_aat.c"
	"./src/maths/KLU/amd_post_tree.c"
	"./src/maths/KLU/klu_utils.c"
	"./src/maths/KLU/klu_kernel.c"
	"./src/maths/KLU/klu_scale.c"
	"./src/maths/KLU/amd_order.c"
	"./src/maths/KLU/btf_order.c"
	"./src/maths/KLU/amd_valid.c"
	"./src/maths/KLU/klu_extract.c"
	"./src/maths/KLU/klu_memory.c"
	"./src/maths/KLU/klu_diagnostics.c"
	"./src/maths/KLU/amd_preprocess.c"
	"./src/maths/KLU/klu_free_numeric.c"
	"./src/maths/KLU/klu_free_symbolic.c"
	"./src/maths/KLU/btf_strongcomp.c"
	"./src/maths/KLU/klu_defaults.c"
	"./src/maths/KLU/amd_1.c"
	"./src/maths/KLU/klu_dump.c"
	"./src/maths/KLU/amd_defaults.c"
	"./src/maths/KLU/amd_postorder.c"
	"./src/maths/KLU/colamd.c"
	"./src/maths/KLU/klu_tsolve.c"
	"./src/maths/KLU/klu_analyze_given.c"
	"./src/maths/KLU/colamd_global.c"
	"./src/maths/KLU/klu_refactor.c"
	"./src/maths/KLU/klu_solve.c"
	"./src/maths/KLU/amd_global.c"
	"./src/maths/KLU/amd_dump.c"
	"./src/maths/KLU/klu.c"
	"./src/maths/KLU/klu_multiply.c"
)
include_directories(
	"src/"
	"src/include/"
	"src/maths/poly/"
)

